# speedwalk

./: .gitignore  README.md  index.html
assets/: backend_bg-03GW7ByZ.wasm  backend_bg-20Qb2o2Y.wasm  backend_bg-45rGkRHD.wasm  backend_bg-7Ody4Kzt.wasm  backend_bg-8Tn1PLv5.wasm  backend_bg-B1Wcnc-k.wasm  backend_bg-B4ByMxek.wasm  backend_bg-BFbWG2Pw.wasm  backend_bg-BI4rdK4g.wasm  backend_bg-BJUOIy-J.wasm  backend_bg-BP1NBtFP.wasm  backend_bg-BPdvRgIm.wasm  backend_bg-BQMYOVTF.wasm  backend_bg-BRmr0tOt.wasm  backend_bg-BTS5g6RC.wasm  backend_bg-BVMj3vMZ.wasm  backend_bg-BYW03bwe.wasm  backend_bg-BZkJ54-i.wasm  backend_bg-BbpGOnq_.wasm  backend_bg-Bgy03Ioj.wasm  backend_bg-BgzKEQ1a.wasm  backend_bg-BhRdKqjw.wasm  backend_bg-BhvWgPeg.wasm  backend_bg-BidHkbH4.wasm  backend_bg-BjwvDUPq.wasm  backend_bg-BlqrSOIl.wasm  backend_bg-Bmoy1mtg.wasm  backend_bg-Bzppe4_j.wasm  backend_bg-C1qf8SVj.wasm  backend_bg-C2KSBnhC.wasm  backend_bg-C457OXui.wasm  backend_bg-CCbd6j_e.wasm  backend_bg-CCkAQzJh.wasm  backend_bg-CExmgyEH.wasm  backend_bg-CHST4G3r.wasm  (+212 more)
backend/: Cargo.toml
backend/src/: audit.rs  bundle.rs  classify.rs  crossings.rs  disconnected.rs  edits.rs  export.rs  geometry.rs  graph.rs  lib.rs  make_sidewalks.rs  make_sidewalks_v2.rs  maxspeed.rs  problems.rs  scrape.rs  split_side_roads.rs  wasm.rs
backend/src/export/test_data/: speedwalk_debug_21.26_52.7529405_13.2368542-remove.osm.xml  speedwalk_debug_21.43_52.7537779_13.2363267-remove.osm.xml  speedwalk_debug_21.81_52.752987_13.2359909-keep.osm.xml  speedwalk_debug_22_52.75191136_13.23689764-remove.osm.xml
(+96 files in other folders)
